# graphic-equalizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: audio_processor.c  audio_processor.h  fft.c  fft.h  wav_reader.c  wav_reader.h
src/gui/: audio_backend.cpp  audio_backend.h  equalizer_widget.cpp  equalizer_widget.h  main_window.cpp  main_window.h  spectrum_display.cpp  spectrum_display.h
test/: ftt_test.c
